Changed Darkmode, added wrap to fix navbar bug, cleaned css, added blog link(replaced impressum)

--- a/homepage/styles.css
+++ b/homepage/styles.css
@@ -2,20 +2,22 @@
     background-color: pink; /* Dark grey color */
     margin-bottom: 20px;
     font-family: Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    color: black !important;
   }
-/* Apply black text color to navbar in both light and dark themes */
-.navbar,
-.navbar-dark {
-    color: black !important;
-}
 
 /* Styling for the dark theme */
-[data-bs-theme='dark'] {
-    --bs-dark: #343a40;
-    --bs-secondary-dark: #6c757d;
-    /* Add other necessary dark theme styles */
+/* Default styles for light theme */
+.wrapcontent[data-bs-theme='light'] {
+  background-color: lightslategray;
+  color: black;
 }
+
+/* Dark theme styles */
+.wrapcontent[data-bs-theme='dark'] {
+  background-color: #343a40;
+  color: white;
+}
+
+
 
 
 .text-center {
